# Hollytics

./: ImdbCreateSchema.sql  LICENSE  Queries.sql  README.md  Table_Index.sql  loaddatabase.py  pyproject.toml  secret.template.json  test1.ipynb
